--- a/templates/counter.html
+++ b/templates/counter.html
@@ -6,6 +6,10 @@
     <title>Counter</title>
   </head>
   <body>
-    <h1>{{name}}</h1>
+    <!-- 3. -->
+    <!-- <h1>The length of word: {{length}}</h1> -->
+
+    <!-- 4. -->
+    <!-- <h1>Word: {{text}}</h1> -->
   </body>
 </html>
