--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- 5. -->
+    <!-- {% load static %}
+    <link rel="stylesheet" href="{% static 'style.css'%}" /> -->
   </head>
   <body>
     <!-- 1. -->
@@ -13,9 +16,55 @@
     <!-- <h1>Name: {{name}}, Surname: {{surname}}, Age: {{age}}</h1> -->
 
     <!-- 3. -->
-    <form method="post" action="counter">
-      <input type="text" name="name" id="" placeholder="Enter your name" />
-      <button type="submit" style="cursor: pointer">Add</button>
-    </form>
+    <!-- <form method="" action="counter">
+      <input
+      type="text"
+      id="text-input"
+      name="name"
+      placeholder="Type something here..."
+      />
+      <button type="submit" style="cursor: pointer">Submit</button>
+    </form> -->
+
+    <!-- 4. -->
+    <!-- <form method="POST" action="counter">
+      {% csrf_token %}
+      <input
+      type="text"
+      id="text-input"
+      name="text"
+      placeholder="Type something here..."
+      />
+      <button type="submit" style="cursor: pointer">Submit</button>
+    </form> -->
+
+    <!-- 5. -->
+    <!-- <h1>Hello and welcome</h1> -->
+
+    <!-- 6. -->
+    <!-- <h1>Person</h1>
+    <p>Full name: {{person.fullName}}, age: {{person.age}}</p> -->
+
+    <!-- <h1>People</h1>
+    {% for person in people %}
+    <p>
+      Full name: {{person.fullName}}, age: {{person.age}},
+      <span>
+        {% if person.is_old == True %}
+        <span>He's old</span>
+        {% else %}
+        <span>He's young</span>
+        {% endif %}
+      </span>
+    </p>
+    {% endfor %} -->
+
+    <!-- 7 -->
+    <!-- <h1>People</h1>
+    {% for person in people %}
+    <p>Full name: {{person.fullName}}, age: {{person.age}}</p>
+    {% endfor %} -->
+
+    <!-- 8. -->
   </body>
 </html>
