--- a/templates/index.html
+++ b/templates/index.html
@@ -66,5 +66,13 @@
     {% endfor %} -->
 
     <!-- 8. -->
+    <!-- <a href="signup">Sign up</a> -->
+    <!-- {% if user.is_authenticated %}
+    <h1>Welcome {{user.username}}</h1>
+    <a href="logout">Log out</a>
+    {% else %}
+    <a href="signin">Sign in</a>
+    {% endif %} -->
+    
   </body>
 </html>
